syntax = "proto3";

package eclipse.ibc.admin.v1;

message MsgInitStorageAccount {}
